fixed bv colour on safari

--- a/client/views/components/generic/bucket-view/bucket-column/BucketColumn.scss
+++ b/client/views/components/generic/bucket-view/bucket-column/BucketColumn.scss
@@ -4,7 +4,7 @@
   background: #b6b6b6;
 
   &.alt-style {
-    background: transparent;
+    background: #a3a3a3;
   }
 }
 .bucket-title {
